@@ -106,7 +106,7 @@ class FractionCardNode extends RichPNode {
                         fractionNode.setGlobalTranslation( x );
                         fractionNode.animateToPositionScaleRotation( targetCenter.getX() - fractionNode.getFullBounds().getWidth() / 2 * scaleFactor + 15,
                                                                      targetCenter.getY() - fractionNode.getFullBounds().getHeight() / 2 * scaleFactor + 10,
-                                                                     scaleFactor, 0, BuildAFractionModule.ANIMATION_TIME ).setDelegate( new DisablePickingWhileAnimating( fractionNode ) );
+                                                                     scaleFactor, 0, BuildAFractionModule.ANIMATION_TIME ).setDelegate( new DisablePickingWhileAnimating( fractionNode, false ) );
 
                         fractionNode.splitButton.setVisible( false );
                         fractionNode.setDragRegionPickable( false );
@@ -133,7 +133,7 @@ class FractionCardNode extends RichPNode {
                     if ( hitWrongOne ) {
 
                         //This has the effect of sending it back to where it originally became a CardNode
-                        animateToPositionScaleRotation( 0, 0, 1, 0, BuildAFractionModule.ANIMATION_TIME ).setDelegate( new DisablePickingWhileAnimating( FractionCardNode.this ) );
+                        animateToPositionScaleRotation( 0, 0, 1, 0, BuildAFractionModule.ANIMATION_TIME ).setDelegate( new DisablePickingWhileAnimating( FractionCardNode.this, true ) );
                     }
                 }
 
